# scene_labelling_rgbd

./: CMakeLists.txt  README  manifest.xml
combine_clouds/: CMakeLists.txt  manifest.xml
combine_clouds/src/: CombineUtils.h  NearestCamMerge.cpp  VisibilityMerge.cpp  abc.cpp  main.cpp  openni_listener.cpp  openni_listener.h
freiburg_kinect-experimental/rgbdslam/: CMakeLists.txt  Makefile  manifest.xml
freiburg_kinect-experimental/rgbdslam/launch/: rgbdslam.launch  rviz_config.vcg
freiburg_kinect-experimental/rgbdslam/msg/: CloudTransforms.msg
freiburg_kinect-experimental/rgbdslam/src/: graph_manager.cpp  graph_manager.h  main.cpp  node.cpp  node.h  openni_listener.cpp  openni_listener.h  qtcv.cpp  qtcv.h  qtros.cpp  qtros.h
graph_segmentation/src/: segment_pcl.cpp
message_sampler/: CMakeLists.txt  mainpage.dox  manifest.xml
message_sampler/src/: main.cpp  openni_listener.cpp  openni_listener.h
poc/: .randomize.m.swp  Scene.m  baseline_random.m  datagen.m  feature_selection.m  filter_labels.m  matrix.m  my_eval.m  parseScenes.m  preprocess.m  preprocess_combined.m  randomize.m  run.m  run_test.m  train.m
polar_scene/: CMakeLists.txt  mainpage.dox  manifest.xml
polar_scene/src/: move_robot.cpp
pygraphcut-0.1/: .mytest.py.swp
reports/: Makefile  midterm.tex  midterm_presentation.tex  mrf_formulation.bib  mrf_formulation.tex  paper.tex  proposal.tex  references.bib
scene_generic/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
scene_generic/src/: binary_to_ply.cpp  convert.cpp  to_ascii.cpp
scene_processing/: CMakeLists.txt  Makefile  README  globalTransform.bag  installDependencies.sh  install_ROS_on_natty.sh  label2color.txt  labels.txt  mainpage.dox  manifest.xml  run_compute_feats.sh  run_compute_features.sh
scene_processing/boost-numeric-bindings/: Makefile.in
scene_processing/cfg/: labeling.cfg  labelviewer.cfg  pcmerger.cfg
scene_processing/combine_clouds/: CMakeLists.txt  mainpage.dox
scene_processing/combine_clouds/src/: openni_listener.cpp
scene_processing/home/: binStumpsE.txt  binStumpsN.txt
scene_processing/office/: binStumpsE.txt  binStumpsN.txt
scene_processing/src/: CombineUtils.h  GUITransform.cpp  HOG.cpp  NearestCamMerge.cpp  VisibilityMerge.cpp  applyLabels.cpp  bag2pcd.cpp  color.cpp  colorImage.cpp  compute_all_features.cpp  compute_features.cpp  compute_single_frame_features.cpp  feat_utils.h  genImageAndLabelFile.cpp  genImagePairs.cpp  get_neighbors.cpp  labelVisualizer.cpp  labeler.cpp  merge_frames.cpp  openni_listener.cpp  openni_listener.h  pcMerger2.cpp  pcd2bag.cpp  point_struct.h  segmentAndLabel.h  segmentation.cpp  shape_features.cpp  testLabelMapping.cpp  transfer_label.cpp  transform.cpp  transformInteractive.cpp  transformation.h  wallDistance.h  write_all_frames.cpp
scene_processing/src/includes/: CombineUtils.h  point_types.h
semantic_label_3d/: CMakeLists.txt  Makefile  README  clean.sh  cmake_install.cmake  colorAll.sh  colormapping.txt  globalTransform.bag  installDependencies.sh  label2color_office.txt  label_to_class_mapping.txt  labels.txt  manifest.xml  office_to_find.txt  rectify.sh  single.sh  stitchAll.sh
semantic_label_3d/cfg/: labeling.cfg  labelviewer.cfg  pcmerger.cfg
semantic_label_3d/home/: binStumpsE.txt
semantic_label_3d/office/: binStumpsE.txt  binStumpsN.txt
semantic_label_3d/src/: GUITransform.cpp  VisibilityMerge.cpp  applyLabels.cpp  bag2pcd.cpp  colorImage.cpp  compute_all_features.cpp  compute_features.cpp  compute_image_features.cpp  compute_num_points.cpp  compute_num_points_combined.cpp  compute_single_frame_features.cpp  definitions.h  evaluate_image_pred.cpp  feat_utils.h  genImageAndLabelFile.cpp  genImagePairs.cpp  get_neighbors.cpp  labelVisualizer.cpp  labeler.cpp  merge_frames.cpp  moveRobot.h  openni_listener.cpp  pcMerger2.cpp  pcd2bag.cpp  point_struct.h  segmentation.cpp  segmentation_lidar.cpp  segmentation_new.cpp  testLabelMapping.cpp  transform.cpp  transformation.h  wallDistance.h
semantic_label_3d/src/includes/: CombineUtils.h  LinearLS.h  color.cpp  genericUtils.h  matrix.h  point_types.h  segmentAndLabel.h
semantic_label_3d/weights/: edge_weights_0.csv  edge_weights_1.csv  edge_weights_10.csv  edge_weights_11.csv  edge_weights_12.csv  edge_weights_13.csv  edge_weights_14.csv  edge_weights_15.csv  edge_weights_16.csv  edge_weights_2.csv  edge_weights_3.csv  edge_weights_4.csv  edge_weights_5.csv  edge_weights_6.csv  edge_weights_7.csv  edge_weights_8.csv  edge_weights_9.csv  node_weights.csv
semantic_mapping/: CMakeLists.txt
semantic_mapping/.svn/: all-wcprops  entries
semantic_mapping/.svn/prop-base/: stack.xml.svn-base
semantic_mapping/.svn/text-base/: stack.xml.svn-base
semantic_mapping/ANN/.svn/: all-wcprops  dir-prop-base  entries
semantic_mapping/FLANN/.svn/: all-wcprops  dir-prop-base  entries
semantic_mapping/cminpack/.svn/: all-wcprops  dir-prop-base  entries
semantic_mapping/point_cloud_mapping/.svn/: all-wcprops  entries  (+1 more)
src/: segment_pcl.cpp
src/.svn/: entries
svm-python-v204/: LICENSE-SVMPYTHON.txt  LICENSE.txt  Makefile  README  README_SVMPYTHON.txt  anonymize_combined.py  anonymize_single.py  binfeats.m  clean.sh  cross_val.pl  cross_val_classify.sh  cross_val_node_only.pl  filter.pl  format.pl  getTimes.sh  get_avg_pr.pl  get_avg_pr_obj.pl  get_confusion_matrix.pl  homeModel  home_labelmap.txt  home_objectMap.txt  initialize.sh  initialize_rl1.sh  merge_pred_label_with_pointCloud.pl  multiclass.bck.py  multiclass.py  normalize.m  objectMap.txt  officeModel  office_labelmap.txt  office_objectMap.txt  rename.py  run.sh  run_compute_features.sh  run_parallel.sh  run_rl1.sh  run_sequential.sh  run_svm.sh  runsvm.sh  setAffinities.sh  (+8 more)
svm-python-v204/data/: data1.txt  data_all.txt  testfile.txt
svm-python-v204/data18-zSquared/: cross_val.pl
svm-python-v204/html-docs/: index.html  multiclass_code.html  style.css  svmapi.html  svmstruct.html  svmstruct_code.html  tokens.py
svm-python-v204/pyglpk-0.3/: Makefile  README.txt  RELEASE.txt  TODO.txt  setup.py
voc-release4/: features.cc  featuresNoMex.cc
(+190 files in other folders)
